--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -660,7 +660,7 @@ function highlightNoSubclipIcons(button) {
             <input id="slide_text" hidden  name="slide_text" value="some text" readonly required class="form-input">
         </div>
         
-        <input id="clipId" type="number" hidden name="clipId" value="some text">
+        <input id="clipId" type="number" hidden name="clipId" value="${liItem.dataset.id}">
         
 
         <input type="text" value="some text" hidden id="remaining" name="remaining">
