--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -709,6 +709,7 @@ function highlightNoSubclipIcons(button) {
     </div>
 </form>`;
     }
+    popup.style.display='flex'
     restoreSelectFields(liItem);
 
 
