--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -710,6 +710,10 @@ function highlightNoSubclipIcons(button) {
 </form>`;
     }
     popup.style.display='flex'
+    document.getElementById('edit-subclip-form').addEventListener('submit', (e) => {
+            e.preventDefault();
+    editAttachValidation('edit-subclip-form', id,getUrl,liItem);
+    });
     restoreSelectFields(liItem);
 
 
