--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -279,6 +279,7 @@ function subclipReset(clipID) {
     function closeModal() {
         const errorElements = document.querySelectorAll('[id^="error"]');
         sessionStorage.clear();
+        document.getElementById('modal-cont').innerHTML=''
 
         errorElements.forEach(element => {
             element.textContent = "";
