--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -106,7 +106,7 @@
         modalContainer.innerHTML=`
         
 <form   class="popup-content" method="POST" enctype="multipart/form-data"
- id="add-subclip-form"
+ id="add-subclip-form-${clipId}"
  
     style="grid-template-columns: 0.7fr 1fr;width:100%;">
     <br>
@@ -174,47 +174,12 @@
         });
         };
         popup.style.display = 'flex';
-        document.getElementById('add-subclip-form').addEventListener('submit', (e) => {
+        document.getElementById(`add-subclip-form-${clipId}`).addEventListener('submit', (e) => {
             e.preventDefault();
-            attachValidation('add-subclip-form', clipId);
+            attachValidation(`add-subclip-form-${clipId}`, clipId);
         })
     }
 
-//     function openPopup(clipId, selectedText, remainingText) {
-//     const modalContainer = document.getElementById('modal-cont');
-//     const popup = document.getElementById('add-subclip-popup');
-//     const errorElements = document.querySelectorAll('[id^="error"]');
-//         sessionStorage.clear();
-
-//         errorElements.forEach(element => {
-//             element.textContent = "";
-//         });
-//     if (modalContainer && popup) {
-//         const getUrl = `/text/add_subcliphtmx/${clipId}/?selectedText=${selectedText}&remainingText=${remainingText}`;
-//         popup.style.display = 'none';
-
-//         modalContainer.addEventListener('htmx:afterSwap', function (event) {
-//             if (event.detail.target === modalContainer) {
-//                 popup.style.display = 'flex';
-//                 document.getElementById('add-subclip-form').addEventListener('submit', (e) => {
-//                     e.preventDefault();
-//                     attachValidation('add-subclip-form', clipId);
-//                 })
-
-//             }
-//         }, { once: true }); 
-
-//         htmx.ajax('GET', getUrl, {
-//             target: "#modal-cont",
-//             swap: 'innerHTML',
-//             headers: {
-//                 'X-Requested-With': 'XMLHttpRequest',
-//             },
-//         });
-//     } else {
-//         console.error("Modal container or popup not found.");
-//     }
-// }
    
 function subclipReset(clipID) {
         const grid= document.getElementById(`grid_${clipID}`)
@@ -284,8 +249,7 @@ function subclipReset(clipID) {
             element.textContent = "";
         });
         document.getElementById('add-subclip-popup').style.display = 'none';
-        // const form = document.getElementById('add-subclip-form');
-        // form.reset();
+        
         const formClipID = document.getElementById('clipId').value;
         const ulElement = document.getElementById(`list-of-tags_${formClipID}`);
         const spanElement = document.getElementById(`slide_span_${formClipID}`);
