reverse of revert

--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -707,6 +707,8 @@ function highlightNoSubclipIcons(button) {
         (async () => {
         await fetchVideoClips(topic,liItem.dataset.clipid);
                 // videoClip.value = liItem.dataset.clipid;
+                console.log(liItem.dataset.clipid)
+
             })();
 
 
