reverse of revert

--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -319,12 +319,12 @@ function subclipReset(clipID) {
     function fetchVideoClips(selected,videoId='') {
         id = selected.value;
         let video_id = `videoSelect`
-        saveInput(selected)
+        // saveInput(selected)
         if (id ) {
             populateVideoCategories(video_id, `/video/get_clip/${id}`)
-            if (videoId){
-                document.getElementById(video_id).value=videoId
-            }
+            // if (videoId){
+            //     document.getElementById(video_id).value=videoId
+            // }
 
         }else {
             document.getElementById(video_id).innerHTML=`<option selected disabled value="">Select A Video Clip</option>`
