reverse of revert

--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -355,10 +355,12 @@ function subclipReset(clipID) {
                     option.textContent = video.title;
                     selectElement.appendChild(option);
                     
-                    selectElement.value=videoId;
-                });
+                    
+                })
                 // restoreVideoSelectInputs();
-                
+                .then(videos=>{
+                    selectElement.value=videoId;
+                })
 
             })
             .catch(error => {
