reverse of revert

--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -354,8 +354,8 @@ function subclipReset(clipID) {
                     option.value = video.id;
                     option.textContent = video.title;
                     selectElement.appendChild(option);
-                    if (video.id ==videoId ){
-                    selectElement.value=videoId;
+                    if (String(video.id) ===String(videoId) ){
+                    selectElement.value=video.id;
                     console.lo('They are same')
 
                     }
