reverse of revert

--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -354,7 +354,7 @@ function subclipReset(clipID) {
                     option.value = video.id;
                     option.textContent = video.title;
                     selectElement.appendChild(option);
-                    if (video.id ===Number(videoId) ){
+                    if (Number(video.id) === Number(videoId) ){
                     selectElement.value=video.id;
                     console.lo('They are same')
 
