reverse of revert

--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -354,9 +354,10 @@ function subclipReset(clipID) {
                     option.value = video.id;
                     option.textContent = video.title;
                     selectElement.appendChild(option);
-                    if (Number(video.id) === Number(videoId) ){
+                    
+                    if (video.id === videoId ){
+                        console.lo('They are same')
                     selectElement.value=video.id;
-                    console.lo('They are same')
 
                     }
                     
