--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -355,7 +355,7 @@ function subclipReset(clipID) {
                     option.textContent = video.title;
                     selectElement.appendChild(option);
                     
-                    if (video.id === videoId ){
+                    if (video.id === String(videoId)){
                         console.lo('They are same')
                     selectElement.value=video.id;
 
