reverse of revert

--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -356,7 +356,7 @@ function subclipReset(clipID) {
                     selectElement.appendChild(option);
                     
                     if (video.id === String(videoId)){
-                        console.lo('They are same')
+                        console.log('They are same')
                     selectElement.value=video.id;
 
                     }
