reverse of revert

--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -355,11 +355,11 @@ function subclipReset(clipID) {
                     option.textContent = video.title;
                     selectElement.appendChild(option);
                     
-                    if (video.id === String(videoId)){
+                    // if (video.id === String(videoId)){
                         console.log('They are same')
                     selectElement.value=video.id;
 
-                    }
+                    // }
                     
                     
                 })
