reverse of revert

--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -357,7 +357,7 @@ function subclipReset(clipID) {
                     
                     // if (video.id === String(videoId)){
                         console.log('They are same')
-                    selectElement.value=video.id;
+                    selectElement.value=String(video.id)
 
                     // }
                     
