--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -710,7 +710,7 @@ function highlightNoSubclipIcons(button) {
         topic.value=liItem.dataset.cat_id
 
         fetchVideoClips(topic,);
-    videoClip.value= sessionStorage.getItem(`${liItem.datset.id}`)
+    videoClip.value= sessionStorage.getItem(`${liItem.dataset.id}`)
     }else if (liItem.dataset.current_file){
         topic.value=''
         videoClip.value=''
